--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "fs": "^0.0.1-security",
+    "helmet": "^8.0.0",
     "mongoose": "^8.12.1",
     "path": "^0.12.7",
     "random-seed": "^0.3.0",
